--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     androidTestImplementation libs.espresso.core
     implementation "androidx.room:room-runtime:2.6.1"
     annotationProcessor "androidx.room:room-compiler:2.6.1"
+    implementation 'androidx.cardview:cardview:1.0.0'
 
 }
