--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -7,27 +7,44 @@ android {
     namespace = "com.example.digitalwardrobe"
     compileSdk = 34
 
+    buildFeatures {
+        buildConfig = true
+        viewBinding = true
+    }
+
     defaultConfig {
         applicationId = "com.example.digitalwardrobe"
         minSdk = 24
         targetSdk = 34
         versionCode = 1
         versionName = "1.0"
-    }
 
-    buildFeatures {
-        viewBinding = true
+        // 👇 Correct way to create BuildConfig variable
+        buildConfigField(
+                "String",
+                "GROQ_API_KEY",
+                "\"${project.properties['GROQ_API_KEY']}\""
+        )
     }
 }
 
 dependencies {
-    implementation(libs.appcompat)
-    implementation(libs.material)
-    implementation(libs.activity)
-    implementation(libs.constraintlayout)
 
-    // ROOM (working metadata version)
-    implementation("androidx.room:room-runtime:2.6.1")
-    annotationProcessor("androidx.room:room-compiler:2.6.1")
-    implementation("androidx.room:room-ktx:2.6.1")
+    // Android Core libs
+    implementation libs.appcompat
+    implementation libs.material
+    implementation libs.activity
+    implementation libs.constraintlayout
+
+    // Room Database
+    implementation "androidx.room:room-runtime:2.6.1"
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
+
+    // OkHttp for API calls
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+
+    // Jackson JSON parser
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
 }
